--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,137 @@
-.App {
-  text-align: center;
-}
+.ProjectDiv {
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+  width: 50%;
+  margin: auto;
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+  flex-wrap: wrap;
+  flex-direction: row;
+  margin-top: 30px;
+
+}
+
+.ProjectDetail {
+  border: 2px solid rgb(40, 158, 50);
+  width: 30%;
+  margin: 15px;
+  list-style: none;
+}
+
+.ProjectData {
+  list-style: none;
+  padding: 25px;
+  padding-left: 50px;
+  width: 100%;
+  margin: auto;
+}
+
+.Data {
+
+  padding: 4px;
+
+  width: 100%;
+  margin: auto;
+  margin-top: 5px;
+  margin-bottom: 5px;
+
+}
+
+a {
+  text-decoration: none;
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+a:hover {
+  color: rgb(34, 33, 33);
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.SingleProject {
+  width: 50%;
+  margin: auto;
+  margin-top: 50px;
+  padding-left: 50px;
+  padding-top: 50px;
+  padding-right: 40px;
+}
+
+.BugsBtn {
+  width: 100px;
+  /* margin: auto; */
+  margin-top: 50px;
+  margin-bottom: 50px;
+  margin-left: 725px;
+}
+
+span {
+  margin-left: 10px;
+  font-weight: lighter;
+}
+
+p {
+  font-weight: bold;
+}
+
+.UsersInProject {
+  border: 2px solid red;
+  padding: 30px;
+  margin: 20px;
+  
+
+}
+
+.UserDiv {
+
+  width: 100%;
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: row;
+  margin-left: 70px;
+
+}
+
+.UserDetail {
+  border: 2px solid green;
+  padding-left: 20px;
+  padding-top: 20px;
+
+ 
+}
+
+.Project {
+  margin-left: 20px;
+  margin-top: 20px;
+
+}
+
+
+
+.ProjectShowHeading {
+  margin-left: 800px;
+  margin-top: 50px;
+}
+
+.BugListHeading {
+  width: 100%;
+  margin: auto;
+  
+  margin-top: 30px;
+  margin-bottom: 1px;
+}
+
+.Top {
+  display: flex;
+  flex-direction: row;
+}
+
+.Back {
+  margin-left: 350px;
+  margin-top: 30px;
+  height:fit-content;
+}
+
+.Top1 {
+  margin-left: 780px;
+  
+}
+.Main{
+  margin-top: 50px;
 }
